--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -1,6 +1,6 @@
 {{!< layout/default}}
 {{> menu}}
-<form class="ui form" method="POST" action="/login">
+<form class="ui form" method="POST" action="/login" id="login">
 	<img src="http://localhost:5000/assets/img/logo.png">
 	<div class="field">
 		<input type="email" placeholder="Email" required name="email">
