--- a/views/templates/layout/layout.html
+++ b/views/templates/layout/layout.html
@@ -6,11 +6,11 @@
     <title>Diloo</title>
     <meta name="HandheldFriendly" content="True" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" type="text/css" href="http://localhost:5000/assets/css/main.css">
-	<link rel="stylesheet" type="text/css" href="http://localhost:5000/assets/semantic/semantic.css">
+	<!--<link rel="stylesheet" type="text/css" href="http://localhost:5000/assets/semantic/semantic.css">-->
 	<link rel="stylesheet" type="text/css" href="http://localhost:5000/assets/semantic/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost:5000/assets/css/main.css">
 	<script type="text/javascript" src="http://localhost:5000/assets/js/jquery-1.12.3.min.js"></script>
-	<script type="text/javascript" src="http://localhost:5000/assets/semantic/semantic.js"></script>
+	<!--<script type="text/javascript" src="http://localhost:5000/assets/semantic/semantic.js"></script>-->
 	<script type="text/javascript" src="http://localhost:5000/assets/semantic/semantic.min.js"</script>
 	<script type="text/javascript" src="http://localhost:5000/assets/js/main.js"></script>	
 </head>
