--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -3,30 +3,27 @@
 	padding: 0;
 }
 body{
-	background-color: #fff;
-}
-body #login{
 	background-color: #0065b5;
+}
+#login{
 	font-size: .8rem;
 	position: absolute;
 	width: 100%;
 	height: 100%;
-}
-body #login  form{
 	margin: 0 auto;
-	width: 350px;
+	max-width: 350px;
 	position: relative;
 	top: 40%;
 	transform: translateY(-50%); 
 }
-body #login img{
-	max-width: 50%;
+#login img{
+	max-width: 100px;
 	padding-bottom: 30px;
 	display: block;
 	margin: 0 auto;
 	margin-bottom: 30px;
 }
-body #login button{
+#login button{
 	width: 100%;
 	margin: 0 auto;
 	font-size: 1.1rem;
