--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -6,7 +6,7 @@ body{
 	background-color: #0065b5;
 }
 #login{
-	font-size: .8rem;
+	font-size: 1rem;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -14,10 +14,11 @@ body{
 	max-width: 350px;
 	position: relative;
 	top: 40%;
+	margin-top: 254px;
 	transform: translateY(-50%); 
 }
 #login img{
-	max-width: 100px;
+	max-width: 50%;
 	padding-bottom: 30px;
 	display: block;
 	margin: 0 auto;
