--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -8,7 +8,7 @@
 	<div class="field">
 		<div class="ui icon input">
 			<input type="password" name="password" placeholder="Contraseña" required>
-			<i class="icon link	hide"></i>
+			<i class="icon link	hide" onclick="mostrar();"></i>
 		</div>
 	</div>
 	<button class="ui button yellow" type="submit">Ingresar</button>
