add & fix: templates structure

--- a/views/templates/dashboard.html
+++ b/views/templates/dashboard.html
@@ -1,2 +1,9 @@
 {{> bar}}
-{{> menu}}
+<section class="content">
+	<div class="ui grid">
+		{{> menu}}
+		<div class="eight wide column">
+			
+		</div>
+	</div>	
+</section>
