--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -1,6 +1,6 @@
 {{!< layout/default}}
 <form class="ui form" method="POST" action="/login" id="login">
-	<img src="http://localhost:5000/assets/img/logo.png">
+	<img src="{{assets}}/assets/img/logo.png">
 	<div class="field">
 		<input type="email" placeholder="Email" required name="email">
 	</div>
