--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -42,3 +42,31 @@ body{
 	display: inline-block;
 	vertical-align: middle;
 }
+.padded{
+	padding-left:10px;
+	padding-right: 10px;
+}
+main{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 1;
+	background-color: white;
+}
+main > header{
+	width:100%;
+	height: 72px;
+	position: absolute;
+	top: 0;
+	z-index: 2;
+}
+main > .content{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	padding-top: 90px;
+	background-color: white;
+}
