--- a/views/templates/layout/inherit.html
+++ b/views/templates/layout/inherit.html
@@ -13,6 +13,8 @@
 	<script type="text/javascript" src="{{assets}}/assets/js/main.js"></script>	
 </head>
 <body>
-		{{{content}}}
+	<main>
+			{{{content}}}
+	</main>
 </body>
 </html>
