--- a/views/templates/partials/menu.html
+++ b/views/templates/partials/menu.html
@@ -1,26 +1,15 @@
-<div class="ui relaxed grid">
-	<div class="three column row">
-		<div class="column">
-			<div class="ui vertical menu">
-			  <a class="active teal item">
-			    Inbox
-			    <div class="ui teal pointing left label">1</div>
-			  </a>
-			  <a class="item">
-			    Spam
-			    <div class="ui label">51</div>
-			  </a>
-			  <a class="item">
-			    Updates
-			    <div class="ui label">1</div>
-			  </a>
-			  <div class="item">
-			    <div class="ui transparent icon input">
-			      <input type="text" placeholder="Search mail...">
-			      <i class="search icon"></i>
-			    </div>
-			  </div>
-			</div>
-		</div>	
-	</div>
+<div class="four wide column">
+	<div class="column padded">
+		<div class="ui vertical menu">
+			<a class="active teal item">
+				Inbox
+			</a>
+			<a class="item">
+				Spam
+			</a>
+			<a class="item">
+				Updates
+			</a>
+		</div>
+	</div>	
 </div>
