--- a/views/assets/css/main.css
+++ b/views/assets/css/main.css
@@ -5,6 +5,24 @@
 body{
 	background-color: #0065b5;
 }
+header{
+	background-color:#0065b5;
+}
+#uavatar{
+	width: 40px;height: 40px;
+}
+#drw{
+	margin-left: 10px;margin-right: 30px;
+}
+#drw #ft{
+	color: white;
+}
+#drw #ft img{
+	width:auto;height:auto;
+}
+#fw{
+	color: white;
+}
 #login{
 	font-size: 1rem;
 	position: absolute;
