--- a/views/templates/partials/bar.html
+++ b/views/templates/partials/bar.html
@@ -3,38 +3,11 @@
       <div class="two column row">
         <div class="left floated column">
           <h1>
-            <img src="{{assets}}/assets/img/logo.png" width="70">
+            <img src="{{assets}}/assets/img/logo.png" width="60">
           </h1>
         </div>
         <div class="right floated column userMenu right aligned">
-          <div class="circle">
-            <img src="{{assets}}/assets/img/user.jpg" id="uavatar" class="ui avatar image">
-          </div>
-          <div class="userInfo">
-            <p>demo</p>
-          </div>
-          <div id="drw" class="ui inline dropdown changeStatus" tabindex="0">
-            <div class="text" id="ft"> 
-              <img src="{{assets}}/assets/img/green.png" style="width:auto;height:auto;" class="ui avatar image">
-              Conectado
-            </div>
-
-            <i id="fw" class="dropdown icon"></i>
-            <div class="menu transition hidden" tabindex="-1">
-              <div class="item active selected">
-                  <img src="{{assets}}/assets/img/green.png" style="width:auto;height:auto;" class="ui avatar image">
-                  Conectado
-              </div>
-              <div class="item">
-              <img src="{{assets}}/assets/img/yellow.png" style="width: auto;height: auto;" class="ui avatar image">
-                Desconectado
-              </div>
-              <div class="item">
-                  <img src="{{assets}}/assets/img/red.png" style="width:auto;height:auto;" class="ui avatar image">
-                  Salir
-              </div>
-            </div>
-          </div>
+          <a href="#" class="whitec">Cerra Sesión</a>
         </div>
       </div>
     </div>
