--- a/views/templates/layout/inherit.html
+++ b/views/templates/layout/inherit.html
@@ -7,9 +7,11 @@
     <meta name="HandheldFriendly" content="True" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="{{assets}}/assets/semantic/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="{{assets}}/assets/semantic/components/dropdown.min.css">
 	<link rel="stylesheet" type="text/css" href="{{assets}}/assets/css/main.css">
 	<script type="text/javascript" src="{{assets}}/assets/js/jquery-1.12.3.min.js"></script>
 	<script type="text/javascript" src="{{assets}}/assets/semantic/semantic.min.js"></script>
+    <script type="text/javascript" src="{{assets}}/assets/semantic/components/dropdown.min.js"></script>
 	<script type="text/javascript" src="{{assets}}/assets/js/main.js"></script>	
 </head>
 <body>
@@ -18,3 +20,4 @@
 	</main>
 </body>
 </html>
+<!-- for all pages except login -->
