--- a/views/templates/partials/bar.html
+++ b/views/templates/partials/bar.html
@@ -7,8 +7,8 @@
           </h1>
         </div>
         <div class="right floated column userMenu right aligned">
-          <a href="#" class="whitec">Cerra Sesión</a>
+          <a href="/logout" class="whitec">Cerra Sesión</a>
         </div>
       </div>
     </div>
-  </header>
+</header>
