--- a/views/templates/partials/menu.html
+++ b/views/templates/partials/menu.html
@@ -1,14 +1,14 @@
 <div class="four wide column">
 	<div class="column padded">
 		<div class="ui vertical menu">
-			<a class="active teal item">
-				Inbox
+			<a class="item">
+				Users Activity
 			</a>
 			<a class="item">
-				Spam
+				Company Activity
 			</a>
-			<a class="item">
-				Updates
+			<a class="item active teal">
+				Statistics
 			</a>
 		</div>
 	</div>	
