--- a/views/templates/dashboard.html
+++ b/views/templates/dashboard.html
@@ -2,8 +2,30 @@
 <section class="content">
 	<div class="ui grid">
 		{{> menu}}
-		<div class="eight wide column">
-			
+		<div class="twelve wide column">
+			<h1>Statistics</h1>            
+            <div class="ui secondary menu">
+                <div class="left item" style="padding-left:0;">
+                    <select class="ui  search dropdown" multiple="">
+                           <option value="">Select companies</option>
+                    </select>
+               </div>                
+                <div class="right item">
+                    <div class="ui icon input">
+                        <input type="text" placeholder="Fecha de inicio" ng-model="start_" id="admin_report_start" class="hasDatepicker ng-pristine ng-untouched ng-valid">
+                            <i class="calendar icon"></i>
+                    </div>
+               </div>
+               <div class="right item">
+                   <div style="margin-right:20px;" class="ui icon input">
+                       <input type="text" placeholder="Fecha de fin" ng-model="end_" id="admin_report_end" class="hasDatepicker ng-pristine ng-untouched ng-valid">
+                            <i class="calendar icon"></i>
+                   </div>
+                   <button type="button" ng-click="companies.activity()" class="ui primary right labeled icon button">
+                       <i class="search icon"></i>Buscar
+                   </button>
+              </div>
+            </div>            
 		</div>
 	</div>	
 </section>
